--- a/ng-demos.csproj
+++ b/ng-demos.csproj
@@ -110,7 +110,10 @@
     <Content Include="ng-demo-01\index.html" />
     <Content Include="ng-demo-02-final\index.html" />
     <Content Include="ng-demo-02\index.html" />
+    <Content Include="ng-demo-03-final\index.html" />
     <Content Include="ng-demo-03\index.html" />
+    <Content Include="ng-demo-04-final\index.html" />
+    <Content Include="ng-demo-04\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
