--- a/ng-demos.csproj
+++ b/ng-demos.csproj
@@ -66,6 +66,7 @@
     <Content Include="content\js\angular-sanitize.min.js.map" />
     <Content Include="content\js\angular-touch.min.js.map" />
     <Content Include="content\js\angular.min.js.map" />
+    <Content Include="ng-demo-06\app\data\customers.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -114,7 +115,15 @@
     <Content Include="ng-demo-03\index.html" />
     <Content Include="ng-demo-04-final\index.html" />
     <Content Include="ng-demo-04\index.html" />
+    <Content Include="ng-demo-05-final\index.html" />
+    <Content Include="ng-demo-05-final\my-customer-badge.html" />
     <Content Include="ng-demo-05\index.html" />
+    <Content Include="ng-demo-06\404.html" />
+    <Content Include="ng-demo-06\app\app.js" />
+    <Content Include="ng-demo-06\app\areas\home\controllers\HomeCtrl.js" />
+    <Content Include="ng-demo-06\app\areas\home\vierws\index.html" />
+    <Content Include="ng-demo-06\app\repositories\CustomerRepository.js" />
+    <Content Include="ng-demo-06\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -122,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="content\img\" />
+    <Folder Include="ng-demo-06\app\directives\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
